--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/server": "^0.1.0",
-        "@vue/server-renderer": "^3.2.36",
+        "@vue/server-renderer": "^3.2.37",
         "vue": "^3.2.36",
         "vue-sweetalert2": "^5.0.5",
-        "vue-toast-notification": "^3.0.4",
-        "webpack-node-externals": "^3.0.0"
+        "vue-toast-notification": "^3.0.4"
     }
 }
