--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.2",
+        "sass-loader": "^12.1",
         "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0",
@@ -33,6 +34,8 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/server": "^0.1.0",
         "@vue/server-renderer": "^3.2.37",
+        "node-sass": "^7.0.1",
+        "sass": "^1.36",
         "vue": "^3.2.36",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^3.0.4"
