--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.2",
-        "sass-loader": "^12.1",
+        "sass": "^1.53.0",
+        "sass-loader": "^10.3.0",
         "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0",
@@ -34,8 +35,8 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/server": "^0.1.0",
         "@vue/server-renderer": "^3.2.37",
+        "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
-        "sass": "^1.36",
         "vue": "^3.2.36",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^3.0.4"
