--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/server": "^0.1.0",
         "@vue/server-renderer": "^3.2.37",
+        "@vuepic/vue-datepicker": "^3.2.2",
+        "moment": "^2.29.3",
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
         "vue": "^3.2.36",
+        "vue-anka-cropper": "^1.1.0",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^3.0.4"
     }
