--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production --mix-config=webpack.ssr.mix.js && mix --production"
+        "production": "mix --production --mix-config=webpack.ssr.mix.js && mix --production",
+        "ssr-dev": "mix watch && mix --mix-config=webpack.ssr.mix.js"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.11.0",
