--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@inertiajs/server": "^0.1.0",
         "@vue/server-renderer": "^3.2.37",
         "@vuepic/vue-datepicker": "^3.2.2",
+        "@vueup/vue-quill": "^1.0.0-beta.8",
         "moment": "^2.29.3",
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
