--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
         "vue": "^3.2.36",
+        "vue-cool-lightbox": "^2.7.5",
         "vue-currency-input": "^2.5.1",
+        "vue-easy-lightbox": "^1.4.1",
         "vue-image-crop-upload": "^3.0.3",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^3.0.4"
