--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/server": "^0.1.0",
+        "@vue-leaflet/vue-leaflet": "^0.6.1",
         "@vue/server-renderer": "^3.2.37",
         "@vuepic/vue-datepicker": "^3.2.2",
         "@vueup/vue-quill": "^1.0.0-beta.8",
+        "leaflet": "^1.8.0",
         "moment": "^2.29.3",
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
@@ -46,6 +48,7 @@
         "vue-easy-lightbox": "^1.4.1",
         "vue-image-crop-upload": "^3.0.3",
         "vue-sweetalert2": "^5.0.5",
-        "vue-toast-notification": "^3.0.4"
+        "vue-toast-notification": "^3.0.4",
+        "vue3-tel-input": "^1.0.4"
     }
 }
