--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@vuepic/vue-datepicker": "^3.2.2",
         "@vueup/vue-quill": "^1.0.0-beta.8",
         "leaflet": "^1.8.0",
+        "leaflet-geosearch": "^3.6.1",
         "moment": "^2.29.3",
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
