--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "vue-image-crop-upload": "^3.0.3",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^3.0.4",
-        "vue3-carousel": "^0.1.40"
+        "vue3-carousel": "^0.1.40",
+        "vuex": "^4.0.2"
     }
 }
