--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "algolia/algoliasearch-client-php": "^3.3",
         "doctrine/dbal": "^3.3",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.5.2",
+        "inertiajs/inertia-laravel": "^0.6.3",
+        "innocenzi/laravel-vite": "^0.2.2",
         "laravel/framework": "^9.11",
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.14.1",
