--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production --mix-config=webpack.ssr.mix.js && mix --production",
-        "ssr-dev": "mix watch && mix --mix-config=webpack.ssr.mix.js"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.11.1",
@@ -20,28 +14,31 @@
         "@vue/compiler-sfc": "^3.2.31",
         "@vue/server-renderer": "^3.2.31",
         "axios": "^0.25.0",
-        "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
         "postcss-import": "^14.0.2",
         "sass": "^1.53.0",
         "sass-loader": "^10.3.0",
-        "tailwindcss": "^3.0.0",
+        "vite": "^3.2.2",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0",
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
         "@inertiajs/server": "^0.1.0",
+        "@vitejs/plugin-vue": "^3.2.0",
         "@vue-leaflet/vue-leaflet": "^0.6.1",
         "@vue/server-renderer": "^3.2.37",
         "@vuepic/vue-datepicker": "^3.2.2",
         "@vueup/vue-quill": "^1.0.0-beta.8",
+        "autoprefixer": "^10.4.13",
         "leaflet": "^1.8.0",
         "leaflet-geosearch": "^3.6.1",
         "moment": "^2.29.4",
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
         "vue": "^3.2.36",
         "vue-cool-lightbox": "^2.7.5",
         "vue-currency-input": "^2.5.1",
