--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "dev:server": "nodemon resources/js/ssr.mjs",
+        "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.11.1",
