--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "vue-image-crop-upload": "^3.0.3",
         "vue-sweetalert2": "^5.0.5",
         "vue-toast-notification": "^3.0.4",
+        "vue-toastification": "^2.0.0-rc.5",
         "vue3-carousel": "^0.1.40",
         "vue3-clipboard": "^1.0.0",
         "vuex": "^4.0.2"
