--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
+        "@fawmi/vue-google-maps": "^0.9.79",
         "@inertiajs/server": "^0.1.0",
         "@vitejs/plugin-vue": "^3.2.0",
         "@vue-leaflet/vue-leaflet": "^0.6.1",
