--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
         "postcss": "^8.4.18",
+        "socket.io-client": "^4.5.3",
         "tailwindcss": "^3.2.1",
         "vue": "^3.2.36",
+        "vue-3-socket.io": "^1.0.5",
         "vue-cool-lightbox": "^2.7.5",
         "vue-currency-input": "^2.5.1",
         "vue-easy-lightbox": "^1.4.1",
