--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.14.1",
         "laravel/scout": "^9.4",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "tightenco/ziggy": "^1.0"
     },
