--- a/package.json
+++ b/package.json
@@ -11,42 +11,40 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
         "@tailwindcss/forms": "^0.5.0",
-        "@tailwindcss/typography": "^0.5.2",
-        "@vue/compiler-sfc": "^3.2.41",
-        "@vue/server-renderer": "^3.2.31",
+        "@tailwindcss/typography": "^0.5.9",
+        "@vitejs/plugin-vue": "^3.2.0",
+        "@vue/compiler-sfc": "^3.2.45",
+        "@vue/server-renderer": "^3.2.45",
         "axios": "^0.25.0",
-        "laravel-vite-plugin": "^0.7.0",
+        "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.19",
         "postcss-import": "^14.0.2",
-        "sass": "^1.53.0",
-        "sass-loader": "^10.3.0",
+        "sass": "^1.57.1",
+        "sass-loader": "^10.4.1",
         "vite": "^3.2.2",
-        "vue": "^3.2.31",
+        "vue": "^3.2.45",
         "vue-loader": "^17.0.0",
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
         "@fawmi/vue-google-maps": "^0.9.79",
         "@inertiajs/server": "^0.1.0",
-        "@vitejs/plugin-vue": "^3.2.0",
         "@vue-leaflet/vue-leaflet": "^0.6.1",
-        "@vue/server-renderer": "^3.2.37",
-        "@vuepic/vue-datepicker": "^3.2.2",
-        "@vueup/vue-quill": "^1.0.0-beta.8",
+        "@vuepic/vue-datepicker": "^3.6.5",
+        "@vueup/vue-quill": "^1.0.1",
         "autoprefixer": "^10.4.13",
-        "leaflet": "^1.8.0",
+        "leaflet": "^1.9.3",
         "leaflet-geosearch": "^3.6.1",
         "moment": "^2.29.4",
         "mosha-vue-toastify": "^1.0.23",
         "node-sass": "^7.0.1",
-        "postcss": "^8.4.18",
-        "socket.io-client": "^4.5.3",
-        "tailwindcss": "^3.2.1",
-        "vue": "^3.2.36",
+        "postcss": "^8.4.21",
+        "socket.io-client": "^4.5.4",
+        "tailwindcss": "^3.2.4",
         "vue-3-socket.io": "^1.0.5",
         "vue-cool-lightbox": "^2.7.5",
         "vue-currency-input": "^2.5.1",
-        "vue-easy-lightbox": "^1.4.1",
+        "vue-easy-lightbox": "^1.11.0",
         "vue-esm-loader": "^0.0.2",
         "vue-image-crop-upload": "^3.0.3",
         "vue-sweetalert2": "^5.0.5",
@@ -54,6 +52,6 @@
         "vue-toastification": "^2.0.0-rc.5",
         "vue3-carousel": "^0.1.40",
         "vue3-clipboard": "^1.0.0",
-        "vuex": "^4.0.2"
+        "vuex": "^4.1.0"
     }
 }
