--- a/chat-server/.htaccess
+++ b/chat-server/.htaccess
@@ -1,7 +1,7 @@
 # DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION BEGIN
-PassengerAppRoot "/home/bivk4194/chat"
-PassengerBaseURI "/chat-server"
-PassengerNodejs "/home/bivk4194/nodevenv/chat/12/bin/node"
+PassengerAppRoot "/home/bivk4194/chat-server"
+PassengerBaseURI "/"
+PassengerNodejs "/home/bivk4194/nodevenv/chat-server/16/bin/node"
 PassengerAppType node
 PassengerStartupFile index.js
 # DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
