--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/scout": "^9.4",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
